# ivi-homesceen-plugins

./: .gitmodules
.github/workflows/: clang-format.yaml  clang-tidy.yaml  codeql.yml  ivi-homescreen.yaml
.github/workflows/patches/filament/: ImportExecutables-Release.cmake
docs/source/: conf.py  flatpak.md  index.rst  webrtc.md
plugins/: CMakeLists.txt  config_plugins.h.in  generated_plugin_registrant.cc
plugins/camera/: CMakeLists.txt  camera_context.cc  camera_plugin.cc  camera_plugin.h
plugins/camera/include/camera/: camera_plugin_c_api.h
plugins/cloud_firestore/: CMakeLists.txt  cloud_firestore_plugin.cc  cloud_firestore_plugin.h  firestore_codec.cc  firestore_codec.h  messages.g.cc  messages.g.h
plugins/cmake/: firebase.cmake
plugins/common/: CMakeLists.txt
plugins/common/tools/: encodable.cc
plugins/common/uuid/: LICENSE  uuidxx.cc  uuidxx.h
plugins/filament_view/: CMakeLists.txt  README.md  filament_view_plugin.cc  filament_view_plugin.h  filament_view_plugin_c_api.cc  messages.g.cc  messages.g.h
plugins/filament_view/core/include/: literals.h  resource.h
plugins/filament_view/core/scene/: view_target.cc  view_target.h
plugins/filament_view/core/systems/: ecsystems_manager.cc
plugins/filament_view/core/utils/: deserialize.cc  deserialize.h  entitytransforms.cc  entitytransforms.h  hdr_loader.cc
plugins/filament_view/include/filament_view/: filament_view_plugin_c_api.h
plugins/firebase_auth/: CMakeLists.txt  firebase_auth_plugin.cc  firebase_auth_plugin.h  messages.g.cc  messages.g.h
plugins/firebase_core/: firebase_core_plugin.cc  firebase_core_plugin.h  messages.g.cc
plugins/firebase_storage/: CMakeLists.txt  firebase_storage_plugin.cc  firebase_storage_plugin.h  messages.g.cc  messages.g.h
plugins/flatpak/: CMakeLists.txt  README.md  appstream_catalog.cc  appstream_catalog.h  common.cc  common.h  component.cc  component.h  flatpak_plugin.cc  flatpak_plugin.h  icon.cc  icon.h  messages.g.cc  messages.g.h  release.cc  release.h  screenshot.cc  screenshot.h
plugins/go_router/: messages.cc
plugins/google_sign_in/: CMakeLists.txt  google_sign_in_plugin.cc  google_sign_in_plugin.h  messages.g.cc  messages.g.h
plugins/integration_test/: messages.cc
plugins/layer_playground_view/: layer_playground_view_plugin.cc  layer_playground_view_plugin.h  layer_playground_view_plugin_c_api.cc
plugins/layer_playground_view/include/layer_playground_view/: layer_playground_view_plugin_c_api.h
plugins/nav_render_view/: libnav_render.cc  nav_render_surface.cc  nav_render_surface.h  nav_render_texture.cc
plugins/nav_render_view/include/nav_render_view/: nav_render_view_plugin_c_api.h
plugins/pdf/: CMakeLists.txt  libpdfium.cc  libpdfium.h  messages.cc  messages.h  pdf_plugin.cc  pdf_plugin_c_api.cc
plugins/rive_text/: CMakeLists.txt  librive_text.cc  rive_text_plugin.cc  rive_text_plugin_c_api.cc
plugins/secure_storage/: keyring.h
plugins/url_launcher/: CMakeLists.txt  messages.g.cc  messages.g.h  url_launcher_plugin.cc  url_launcher_plugin.h
plugins/video_player_linux/: CMakeLists.txt
plugins/video_player_linux/include/video_player_linux/: video_player_plugin_c_api.h
plugins/webrtc/: CMakeLists.txt  README.md  webrtc_plugin.cc  webrtc_plugin.h  webrtc_plugin_c_api.cc
plugins/webrtc/include/webrtc/: webrtc_plugin_c_api.h
plugins/webview_flutter_view/: CMakeLists.txt  README.md  messages.g.cc  webview_flutter_view_plugin.cc  webview_flutter_view_plugin.h  webview_flutter_view_plugin_c_api.cc
plugins/webview_flutter_view/include/webview_flutter_view/: webview_flutter_view_plugin_c_api.h
(+73 files in other folders)
